# decision-transformer-minigrid-memory

./: .gitignore  README.md  pyproject.toml  run_project.sh
docs/: experiment_timeline.md
reports/: final_submission_report.md  literature_review.md  pdf_style.tex
src/: __init__.py  antmaze.py  d4rl_continuous.py  data.py  evaluate.py  models.py  plots.py  progress.py  run_ablations.py  summarize_epoch_sweep.py  summarize_runs.py  train.py  train_antmaze.py  train_d4rl.py  visualize_hopper.py
src/envs/: __init__.py  gridworld.py  memory.py
tests/: test_continuous.py  test_data.py  test_gridworld.py  test_memory.py  test_models.py
